[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=4]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=5]
[ext_resource path="res://player/bullet/bullet_spawner.gd" type="Script" id=6]
[ext_resource path="res://Client.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 50.9448
height = 34.674

[node name="Player" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
SPEED = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="BulletSpawn" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="CooldownTimer" type="Timer" parent="BulletSpawn"]
wait_time = 0.2
one_shot = true

[node name="Client" parent="." instance=ExtResource( 7 )]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="update_server" from="." to="Client" method="_update_server_player_position_and_velocity"]
